<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@+id/pref_screen" >
    
    <ListPreference 
        	android:key="remainderOptions"
        	android:title="@string/show_reminder"
        	android:summary="@string/show_reminder_desc"
        	android:entries="@array/settings_reminder_values"
        	android:entryValues="@array/settings_reminder_keys"
        	android:defaultValue="4"/>
    
    <EditTextPreference 
        	android:key="firstHour"
        	android:title="@string/first_hour"
        	android:summary="@string/first_hour_desc"
        	android:defaultValue="8"/>

    <EditTextPreference 
        	android:key="lastHour"
        	android:title="@string/last_hour"
        	android:summary="@string/last_hour_desc"
        	android:defaultValue="23"/>

    <ListPreference 
        	android:key="intervalDownloadOptions"
        	android:title="@string/show_medications_frequency_update"     
        	android:summary="@string/show_medications_frequency_update_desc"   	
        	android:entries="@array/settings_interval_download_values"
        	android:entryValues="@array/settings_interval_download_keys"        	
        	android:defaultValue="60"/>
    
</PreferenceScreen>