<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_monitor_patient"
        android:icon="@drawable/ic_menu_monitor"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/monitor_patient"/>
    
    <item
        android:id="@+id/action_medications"
        android:icon="@drawable/ic_menu_medications"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/medications"/>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
