<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="org.coursera.symptom.activity.patient.CheckinActivity" >

    <LinearLayout
        android:id="@+id/llCheckinDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvLabelPatient"
                style="@style/label_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientName" />

            <TextView
                android:id="@+id/tvPatientName"
                style="@style/text_info_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvLabelCheckinDate"
                style="@style/label_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date" />

            <TextView
                android:id="@+id/tvCheckinDate"
                style="@style/text_info_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/black" />
        
        <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:paddingTop="@dimen/field_top_margin">             
             <Button
                android:id="@+id/btViewPhoto"
                style="@style/normal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_photo" />             
         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/field_top_margin" >

            <TextView
                android:id="@+id/tvLabelHowbad"
                style="@style/label_normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_howbad" />

            <TextView
                android:id="@+id/tvHowBad"
                style="@style/response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/field_top_margin" >

            <TextView
                android:id="@+id/tvLabelTakeMedication"
                style="@style/label_normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_takemedication" />

            <TextView
                android:id="@+id/tvTakeMedication"
                style="@style/response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/field_top_margin" >

            <TextView
                android:id="@+id/tvLabelPainStop"
                style="@style/label_normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_painstop" />

            <TextView
                android:id="@+id/tvPainStop"
                style="@style/response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>               
         
         <LinearLayout
            android:id="@+id/llTakeMedicationControl" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/field_top_margin" 
            android:gravity="center">
            <TextView
                android:id="@+id/tvLabelTakeMedicationControl"
                style="@style/label_normal_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_medication_control" />
         </LinearLayout>         
         
    </LinearLayout>

</ScrollView>