<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="org.coursera.symptom.activity.LoginActivity" >

    <TextView
        android:id="@+id/tvAccessServer"
        style="@style/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" />

    <!-- <View -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="2dp" -->
    <!-- android:background="@color/symptom_color" /> -->

    <LinearLayout
        android:id="@+id/llLogin"
        style="@style/login_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvLogin"
            style="@style/label_normal_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_login" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="50"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvPassword"
            style="@style/label_normal_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/insert_password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="50"
            android:inputType="textPassword" />

        <!-- <CheckBox -->
        <!-- style="@style/label_mini" -->
        <!-- android:id="@+id/chRememberMe" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="@string/remember_me" /> -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoginButton"
        style="@style/login_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>
<!--                 android:layout_marginTop="@dimen/button_top_margin" -->

</LinearLayout>