<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/header_horizontal_margin"
    	android:paddingLeft="@dimen/header_horizontal_margin"
    	android:paddingRight="@dimen/header_horizontal_margin"
    	android:paddingTop="@dimen/header_horizontal_margin">

        <TextView
            style="@style/label_header"            
            android:id="@+id/tvLabelPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patientName" />

        <TextView
            style="@style/text_info_header"            
            android:id="@+id/tvPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patientName" />
    </LinearLayout>
    
<!--     <View -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="2dp" -->
<!--         android:background="@color/symptom_color" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/header_horizontal_margin"
    	android:paddingLeft="@dimen/header_horizontal_margin"
    	android:paddingRight="@dimen/header_horizontal_margin">

        <TextView
            style="@style/label_header"
            android:id="@+id/tvLabelNewMedication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_medication" 
             />

        <EditText
            android:id="@+id/etNewMedication"
            style="@style/text_info_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="text" 
            android:labelFor="@id/tvLabelNewMedication">

        </EditText>

        <Button
            android:id="@+id/btNewMedication"
            style="@style/small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/add" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        
    <TextView
            style="@style/label_head"                      
            android:id="@+id/tvLabelCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current" />

    </LinearLayout>
</LinearLayout>